Remove node_modules folder.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
         command: cd web/themes/custom/default && yarn install
     - run:
         name: Compile Sass
-        command: cd web/themes/custom/default && yarn production
+        command: cd web/themes/custom/default && yarn production && rm -rf web/themes/custom/default/node_modules
     - persist_to_workspace:
         root: .
         paths:
