--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,9 +32,10 @@ workflows:
           # file so that lines specifying build artifact directories are removed.
           # https://github.com/pantheon-systems/example-drops-8-composer/blob/670ae310c601dabbb7b35411ff3e08e4b1fac7a3/composer.json#L67
           - run: rm web/themes/custom/default/.gitignore
+      - pantheon/behat_tests
 
 orbs:
-  pantheon: kporras07/pantheon-circleci@0.0.2
+  pantheon: kporras07/pantheon-circleci@0.0.3
 jobs:
   npmbuild_and_persist:
     docker:
