--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ workflows:
         # jobs must be run.
         requires:
           - npmbuild_and_persist
+          - pantheon/static_tests
         # Because the checkout command is called from pre-steps, it should
         # not be run inside the orb-defined steps.
         checkout: false
@@ -34,6 +35,10 @@ workflows:
     - pantheon/visual_regression:
         requires:
           - pantheon/push
+        filters:
+            branches:
+              ignore:
+                - master
     - pantheon/behat_tests:
         requires:
           - pantheon/visual_regression
